--- a/css/home.css
+++ b/css/home.css
@@ -31,6 +31,19 @@ body{
  
 }
 
+/* レスポンシブデザイン */
+@media screen and(max-width: 768px) {
+  .app{
+    width: auto;
+  }
+    
+  
+    
+  
+
+  
+}
+
 
 
 /*フォーム全体*/
@@ -395,13 +408,7 @@ margin-top: 20px;
     }
   }
 
-  .footer-item{
-    font-family: 毛筆太文字, sans-serif;
-    color: #000000;
-    font-size: 35px;
-    margin: 0;
-    display: grid;  
-  }
+  
 
 
   .footer a{
