--- a/css/home.css
+++ b/css/home.css
@@ -18,7 +18,6 @@ body{
   margin-top: 30px;
   width: 280px;
   height: 65px;
-  object-fit: cover;
 
 }
 
@@ -31,29 +30,23 @@ body{
  
 }
 
-/* レスポンシブデザイン */
 @media screen and (max-width: 768px) {  
   body{
     width: auto;
   }
   .header{
+    width: 100%;
     height: auto;
   }
-  .ra-men-img{
-  }
-  
-  #g_navi{
-    width: auto;
-  }
-  
-  ul{
-    width: auto;
-  }
-  
-  .app{
-    width: auto;
+
+  .title-app{
+    width: 60%;
+    margin-left: 30px;
   }
 }
+  form{
+    display: none;
+  }
 
 
 
