--- a/css/home.css
+++ b/css/home.css
@@ -30,7 +30,8 @@ body{
  
 }
 
-@media screen and (max-width: 768px) {  
+@-moz-document url-prefix() {
+  @media screen and (max-width: 768px)  {  
   body{
     width: auto;
   }
@@ -44,10 +45,7 @@ body{
     margin-left: 30px;
   }
 }
-  form{
-    display: none;
   }
-
 
 
 /*フォーム全体*/
@@ -89,6 +87,21 @@ body{
   color:#666; 
   }
 
+  @-moz-document url-prefix() {
+    @media (max-width: 768px){ 
+      
+      #form1{
+        display: none;
+      }
+
+
+
+
+    }}
+
+
+
+
   
 /* メニュー */
 
@@ -129,10 +142,49 @@ body{
 #g_navi ul li a:hover {			
         color: #7fbfff;		
       }
+
+
+      @-moz-document url-prefix() {
+        @media (max-width: 768px){ 
+      
+        .app{
+        width: 400px;
+        margin-top: 30px;
+      }
+      h3{
+        width: 290px;
+        margin: 0 auto;
+        margin-top: 30px;
+      }
+      p{
+        font-size: 13px;
+      }
+      
+      #cup-noodle-rankings{
+        padding: 10px;
+        font-size: 20px;
+      }
+
+      #g_navi{
+        width: auto;
+      }
+
+      #g_navi ul{
+        font-size: 10px;
+      }
+
+      #g_navi ul li{
+        width: 12%;
+      }
+    }
+  }
+
+
 .app{
-    width: 800px;
+    max-width: 800px;
     text-align: center;
-    margin: 200px auto;
+    margin: 0 auto;
+    margin-top: 200px;
     background: #fff;
     padding: 5px 45px;
   }
