--- a/css/home.css
+++ b/css/home.css
@@ -36,7 +36,7 @@ body{
     width: auto;
   }
   .header{
-    width: 100%;
+    width: auto;
     height: auto;
   }
 
@@ -165,16 +165,16 @@ body{
         font-size: 20px;
       }
 
-      #g_navi{
+      
+
+      #g_navi ul{
+        font-size: 12px;
         width: auto;
       }
 
-      #g_navi ul{
-        font-size: 10px;
-      }
-
       #g_navi ul li{
-        width: 12%;
+        width: 16%;
+        text-align: center;
       }
     }
   }
