--- a/css/home.css
+++ b/css/home.css
@@ -120,7 +120,7 @@ body{
 
      
 .app{
-    max-width: 800px;
+    width: 800px;
     text-align: center;
     margin: 0 auto;
     margin-top: 200px;
