--- a/css/home.css
+++ b/css/home.css
@@ -18,6 +18,7 @@ body{
   margin-top: 30px;
   width: 280px;
   height: 65px;
+  object-fit: cover;
 
 }
 
@@ -95,7 +96,7 @@ body{
   margin: 0 auto;		
   padding: 0 3%;
   width: 94%;		
-  width: 960px;		
+  max-width: 960px;		
   list-style-type: none;
 }		
 
@@ -119,18 +120,11 @@ body{
       }
 
 
-      
 
-
-
-
-
-     
 .app{
     width: 800px;
     text-align: center;
-    margin: 0 auto;
-    margin-top: 200px;
+    margin: 200px auto;
     background: #fff;
     padding: 5px 45px;
   }
@@ -149,6 +143,13 @@ h2{
     border-bottom: 3px solid #f05d5d;
     
   }
+
+  
+
+
+
+
+
 
 
 
@@ -244,12 +245,14 @@ input[type="submit"] {
   .image-slider img.active {
     opacity: 1;
   }
+
+
   .prev-btn,
 .next-btn {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  font-size: 24px;
+  font-size: 35px;
   font-weight: bold;
   cursor: pointer;
 }
@@ -261,6 +264,7 @@ input[type="submit"] {
 .next-btn {
   right: 20px;
 }
+
 
 .image-info {
   position: absolute;
@@ -334,31 +338,50 @@ input[type="submit"] {
 
 
 .button-item{
-margin-top: 20px;
-
-
+margin-top: 30px;
 }
 
 #minutes{
-  padding: 7px;
+  width: 110px;
+  padding: 12px;
+  font-size: 15px;
+  display: inline-block;
+  margin: 10px;
+  background: #5ebfff;
+  font-weight: bold;
+  color: #ffffff;
+  border: 1px solid #000000;
+  border-radius: 10px;
+
+
+
 }
 
-#start{
-  padding: 7px
+select option{
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
 }
 
-#stop{
-  padding: 7px
+#start,
+#stop,#reset{
+  width: 110px;
+  padding: 10px;
+  font-size: 15px;
+  display: inline-block;
+  margin: 0 10px;
+  background: #5ebfff;
+  font-weight: bold;
+  color: #ffffff;
+  border: 1px solid #000000;
+  border-radius: 10px;
+
 }
 
-#reset{
-  padding: 7px
-}
 
 #countdown{
   font-size: 55px;
   font-weight:800;
-  margin-top: 40px;
+  margin-top: 20px;
   letter-spacing: 0.3em;
 }
 
