--- a/css/home.css
+++ b/css/home.css
@@ -252,7 +252,7 @@ input[type="submit"] {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  font-size: 35px;
+  font-size: 50px;
   font-weight: bold;
   cursor: pointer;
 }
@@ -343,11 +343,11 @@ margin-top: 30px;
 
 #minutes{
   width: 90px;
-  height: 47px;
+  height: 45px;
   padding: 12px;
   font-size: 15px;
   display: inline-block;
-  margin: 10px;
+  margin: 0 10px;
   background: #ffffff;
   font-weight: bold;
   color: #000000;
