--- a/css/home.css
+++ b/css/home.css
@@ -129,6 +129,12 @@ body{
     padding: 5px 45px;
   }
 
+  @media screen and (max-width: 801px) {
+  .app{
+    padding: 0 10px;
+    margin-bottom: 0;
+  }
+  }
   .app p{
   text-align: left;
 }
