--- a/css/home.css
+++ b/css/home.css
@@ -4,6 +4,8 @@ body{
   background: #e6e6e6;
 }
 
+
+
 .header{
   display: flex;
   background: #fff;
@@ -120,6 +122,18 @@ body{
       }
 
 
+      @media screen and (max-width:800px) {
+        #g_navi {
+          font-family: "Meiryo", sans-serif;
+          font-weight: bold;
+
+        }
+      }
+
+
+
+
+
 
 .app{
     width: 800px;
@@ -129,15 +143,23 @@ body{
     padding: 5px 45px;
   }
 
-  @media screen and (max-width: 801px) {
+  @media screen and (max-width: 800px) {
   .app{
-    padding: 0 10px;
+    padding: 0 auto;
     margin-bottom: 0;
+    width: 100%;
   }
-  }
+  
   .app p{
   text-align: left;
+  }
+  
+  h3{
+    font-family: "Meiryo", sans-serif;
+  }
 }
+  
+
 
 h2{
     background: #333;
@@ -150,7 +172,14 @@ h2{
     
   }
 
-  
+  @media screen and (max-width: 800px) {
+    h2{
+      font-family: "Meiryo", sans-serif;
+
+    }
+
+
+  }
 
 
 
