--- a/css/item.css
+++ b/css/item.css
@@ -119,6 +119,15 @@ body{
     padding: 5px 45px;
   }
 
+
+  @media screen and (max-width: 800px){
+    .app{ 
+    width: 100%;
+    padding: 0 auto;
+    margin-bottom: 0;
+  }
+}
+
   .app p{
   text-align: left;
 }
