--- a/css/item.css
+++ b/css/item.css
@@ -169,6 +169,15 @@ h2{
     margin: 10px auto;
   }
 
+  .noodle-item a{
+    color: #000000;
+    text-decoration: none;
+  }
+
+  .noodle-item a:hover{
+    color: #3fbff1;
+  }
+
   .noodle-img {
     display: block;
     margin: 0 auto;
