--- a/css/style.css
+++ b/css/style.css
@@ -139,6 +139,7 @@ body{
 }
 
   h2{
+    margin-top: 20px;
     background: #333;
     margin-bottom: 0%;
     color: #fff;
@@ -212,6 +213,17 @@ a:hover{
   margin-top: 10px;
 }
 
+
+.review-button{
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background: #4ba5ff;
+  padding: 10px;
+  color: #eee;
+  font-weight: bold;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
 
 
 
