--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,7 @@ body{
   }
 
 table{
-  border-color: #c5c4c4;
+  border-color: #868686;
   width: 100%;
   width: 670px;
   margin: 30px auto;
@@ -167,7 +167,7 @@ td{
 }
 
 th{
-  border-color: #c5c4c4;
+  border-color: #858585;
   padding: 10px;
 }
 
